# alignment-aware-tokenization

./: .gitignore  EXPERIMENTS.md  LICENSE  Makefile  README.md  pyproject.toml
configs/: README.md  acceptance.env.example  gemma2b.yml  llama3_8b.yml  llama3_8b_native_bpe.yml  llama3_8b_spm.yml  mistral7b.yml  mistral7b_spm.yml  pythia1_4b.yml  pythia1_4b_native_bpe.yml  pythia410m.yml  pythia410m_native_bpe.yml  qwen2_7b.yml  qwen2_7b_native_bpe.yml  qwen2_7b_spm.yml
data/: MANIFEST.md  README.md
data/eval/: adv_harmful_200.jsonl  (+4 more)
data_tools/: benign_all_formatted.txt  build_tokspill.py  curate_anchors.py  curate_attack.py  curate_benign.py  make_stem_split.py  perturb_attacks.py
eval/: eval_drift.py  eval_jailbreak.py  label_efficiency.py  seg_stability.py  tokenizer_spillover.py
models/: embed_remap.py  embed_remap_cli.py  lora_drift.py  probe.py
scripts/: collect_results.py  make_paper_tables.py  merge_acceptance_summaries.py  redesign_paper_figures.py  run_bpe_baselines.sh  run_bpe_search.sh  run_eval_all.sh  run_gemma_spm_priors.sh  run_judge_eval.sh  run_label_efficiency.sh  run_lora_drift.sh  run_lora_drift_native_bpe.py  run_lora_drift_pythia1_4b.sh  run_lora_drift_spm.sh  run_perturb_attacks.sh  run_probes_3models.sh  run_probes_pythia.sh  run_probes_spm.sh  run_sanity.sh  run_spm_priors.sh  run_tokspill.sh  run_xstest_external.py  summarize_acceptance_results.py  validate_data.py
tokenizers/: bpe_dropout.py  bpe_search.py  gemma_unigram_priors.py  spm_priors.py
tools/: tokenizer_export.py
utils/: concept.py  data_io.py  seeding.py  stems.py
(+21 files in other folders)
