[project]
name = "alignment_aware_tokenization"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "transformers>=4.42",
  "peft>=0.11",
  "accelerate>=0.30",
  "datasets>=2.20",
  "sentencepiece>=0.1.99",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "tqdm>=4.66",
  "pyyaml>=6.0",
]

[tool.isort]
profile = "black"
[tool.black]
line-length = 100

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
